--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</div>
 			<div class="column">
 				<h4>Aye yo wassup</h4>
-				<p>Namaku Aya
+				<p>Namaku Aya. Aku sedang membuat project web sederhana dengan menggunakan html & css. Mohon bimbingannya :D
 				</p>
 			</div>
 		</div>
@@ -37,7 +37,7 @@
 					<tr>
 						<td>Nama</td>
 						<td>:</td>
-						<td>Mazaya Syauqi HUmairahusna Adriadi (Aya)</td>
+						<td>Mazaya Syauqi Humairahusna Adriadi (Aya)</td>
 					</tr>
 					<tr>
 						<td>Alamat</td>
@@ -69,7 +69,7 @@
 					<ul type="square">
 						<h3>Hobiku</h3>
 						<li>Membaca</li>
-						<li>Membuat lego</li>
+						<li>Menonton Anime</li>
 						<li>Menggambar</li>
 					</ul>
 				</div>
@@ -101,6 +101,18 @@
 		<div class="column">
 			<a href="https://instagram.com/ayam._tiang" target="_blank"><img src="instagram.jpg"
 				width="100px"></a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column">
+			<a href="https://pin.it/2RXfSdV" target="_blank"><img src="pinterest.jpg"
+				width="50px"></a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column">
+			<a href="https://mobile.capcutshare.com/s/Zs82BdFGG" target="_blank"><img src="CapCut.png"
+				width="50px"></a>
 		</div>
 	</div>
 </body>
