--- a/index.html
+++ b/index.html
@@ -9,21 +9,32 @@
 
 <body>
 	<header>
-		<nav><b>Project Akhir</b></nav>
+		<nav>
+			<!-- update 15 november -->
+			<a href="#perkenalan">Perkenalan</a>
+			<a href="#biodata">Biodata</a>
+			<a href="#kontak">Kontak</a>
+			<a href="#tentang">Tentang</a>
+			<b>Project Akhir</b>
+		</nav>
 	</header>
-	<div class="perkenalan">
+
+	<!-- perkenalan -->
+	<div class="perkenalan" id="perkenalan">
 		<div class="row">
 			<div class="column">
-				<img src="ume_img.png" width="250px">
+				<img src="images/gundam.png" width="250px">
 			</div>
 			<div class="column">
-				<h4>Aye yo wassup</h4>
-				<p>Namaku Aya. Aku sedang membuat project web sederhana dengan menggunakan html & css. Mohon bimbingannya :D
+				<h4>Hai</h4>
+				<p>Namaku Roy. Aku sedang membuat project web sederhana menggunakan html & css. Mohon bantuannya ya :)
 				</p>
 			</div>
 		</div>
 	</div>
-	<div class="biodata">
+
+	<!-- biodata -->
+	<div class="biodata" id="biodata">
 		<div class="header">
 			<h1>Biodata</h1>
 		</div>
@@ -37,27 +48,27 @@
 					<tr>
 						<td>Nama</td>
 						<td>:</td>
-						<td>Mazaya Syauqi Humairahusna Adriadi (Aya)</td>
+						<td>Fayusri Royfanto</td>
 					</tr>
 					<tr>
 						<td>Alamat</td>
 						<td>:</td>
-						<td>JL. Gatot Subroto, NO.75B, Wonokarto,Wonogiri</td>
+						<td>Klaten</td>
 					</tr>
 					<tr>
 						<td>Tempat, Tanggal Lahir</td>
 						<td>:</td>
-						<td>Ponorogo, 8 Mei 2011</td>
+						<td>Bangkalan, 3 Juli 2000</td>
 					</tr>
 					<tr>
 						<td>Nomor HP</td>
 						<td>:</td>
-						<td>+6281548010863</td>
+						<td>+62895124567</td>
 					</tr>
 					<tr>
 						<td>Instagram</td>
 						<td>:</td>
-						<td>@ayam._tiang</td>
+						<td>@pzyxooo</td>
 					</tr>
 				</table>
 
@@ -68,23 +79,25 @@
 				<div class="column" align="left">
 					<ul type="square">
 						<h3>Hobiku</h3>
-						<li>Membaca</li>
-						<li>Menonton Anime</li>
-						<li>Menggambar</li>
+						<li>Berenang</li>
+						<li>Berlari</li>
+						<li>Bermain Game</li>
 					</ul>
 				</div>
 				<div class="column" align="left">
 					<ul type="circle">
 						<h3>Keahlianku</h3>
-						<li>Bermain Piano</li>
-						<li>Bermain Basket</li>
-						<li>Stronk</li>
+						<li>Jago Coding</li>
+						<li>Bermain Gitar</li>
+						<li>Berlari Cepat</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="Kontak">
+
+	<!-- Kontak saya -->
+	<div class="kontak" id="kontak">
 		<div class="container">
 			<div class="row">
 				<div class="column">
@@ -95,24 +108,60 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="column">
+					<a href="https://instagram.com/pzyxooo" target="_blank"><img src="images/instagram.png"
+							width="100px"></a>
+				</div>
+				<div class="column">
+					<a href="https://facebook.com/fayusri.royfanto" target="_blank"><img src="images/Facebook.png"
+							width="100px"></a>
+				</div>
+				<div class="column">
+					<a href="https://github.com/pzyxo" target="_blank"><img src="images/Github.png" width="100px"></a>
+				</div>
+				<div class="column">
+					<a href="https://wa.me/62895" target="_blank"><img src="images/WhatsApp.png"
+							width="100px"></a>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="column">
-			<a href="https://instagram.com/ayam._tiang" target="_blank"><img src="instagram.jpg"
-				width="100px"></a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="column">
-			<a href="https://pin.it/2RXfSdV" target="_blank"><img src="pinterest.jpg"
-				width="50px"></a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="column">
-			<a href="https://mobile.capcutshare.com/s/Zs82BdFGG" target="_blank"><img src="CapCut.png"
-				width="50px"></a>
+
+	<!-- lebih lanjut -->
+	<div class="tentang" id="tentang">
+		<div class="container">
+			<div class="row">
+				<div class="column">
+					<div class="header">
+						<b>Tentang Saya</b>
+					</div>
+					<div class="body">
+						<p>Saya adalah seorang lulusan S1 Pendidikan Teknik Informatika dan Komputer. Saya saat ini
+							sedang mengajar ekstrakurikuler coding di SMP Islam Al Azhar 21. Saya suka membuat website
+							dan game 2d menggunakan unity. Saya sudah memiliki beberapa website dan game. Kalian bisa
+							mengaksesnya menggunakan tombol di bawah ini.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="column">
+					<div class="link">
+						<a href="https://pz-cafe.netlify.app" target="_blank"><img src="images/pz-cafe.png"></a>
+					</div>
+				</div>
+				<div class="column">
+					<div class="link">
+						<a href="https://pzyxo.itch.io/adventure-of-neo" target="_blank"><img src="images/AoN.png"></a>
+					</div>
+				</div>
+				<div class="column">
+					<div class="link">
+						<a href="Gallery/gallery.html" target="_blank"><img src="images/gallery.png"></a>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
