--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 	<div class="perkenalan" id="perkenalan">
 		<div class="row">
 			<div class="column">
-				<img src="images/gundam.png" width="250px">
+				<img src="ume_img.png" width="250px">
 			</div>
 			<div class="column">
-				<h4>Hai</h4>
-				<p>Namaku Roy. Aku sedang membuat project web sederhana menggunakan html & css. Mohon bantuannya ya :)
+				<h4>Aye yo wassup</h4>
+				<p>Namaku Aya. Aku sedang membuat project web sederhana dengan menggunakan html & css. Mohon bimbingannya :D
 				</p>
 			</div>
 		</div>
@@ -48,27 +48,27 @@
 					<tr>
 						<td>Nama</td>
 						<td>:</td>
-						<td>Fayusri Royfanto</td>
+						<td>Mazaya Syauqi Humairahusna Adriadi (Aya)</td>
 					</tr>
 					<tr>
 						<td>Alamat</td>
 						<td>:</td>
-						<td>Klaten</td>
+						<td>JL. Gatot Subroto, NO.75B, Wonokarto,Wonogiri</td>
 					</tr>
 					<tr>
 						<td>Tempat, Tanggal Lahir</td>
 						<td>:</td>
-						<td>Bangkalan, 3 Juli 2000</td>
+						<td>Ponorogo, 8 Mei 2011</td>
 					</tr>
 					<tr>
 						<td>Nomor HP</td>
 						<td>:</td>
-						<td>+62895124567</td>
+						<td>+6281548010863</td>
 					</tr>
 					<tr>
 						<td>Instagram</td>
 						<td>:</td>
-						<td>@pzyxooo</td>
+						<td>@ayam._tiang</td>
 					</tr>
 				</table>
 
@@ -78,18 +78,18 @@
 			<div class="row">
 				<div class="column" align="left">
 					<ul type="square">
-						<h3>Hobiku</h3>
-						<li>Berenang</li>
-						<li>Berlari</li>
-						<li>Bermain Game</li>
+						<<h3>Hobiku</h3>
+						<li>Membaca</li>
+						<li>Menonton Anime</li>
+						<li>Menggambar</li>
 					</ul>
 				</div>
 				<div class="column" align="left">
 					<ul type="circle">
-						<h3>Keahlianku</h3>
-						<li>Jago Coding</li>
-						<li>Bermain Gitar</li>
-						<li>Berlari Cepat</li>
+						<h3>My talents</h3>
+						<li>Bermain Piano</li>
+						<li>Bermain Basket</li>
+						<li>Stronk</li>
 					</ul>
 				</div>
 			</div>
@@ -108,23 +108,22 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="column">
-					<a href="https://instagram.com/pzyxooo" target="_blank"><img src="images/instagram.png"
-							width="100px"></a>
-				</div>
-				<div class="column">
-					<a href="https://facebook.com/fayusri.royfanto" target="_blank"><img src="images/Facebook.png"
-							width="100px"></a>
-				</div>
-				<div class="column">
-					<a href="https://github.com/pzyxo" target="_blank"><img src="images/Github.png" width="100px"></a>
-				</div>
-				<div class="column">
-					<a href="https://wa.me/62895" target="_blank"><img src="images/WhatsApp.png"
-							width="100px"></a>
-				</div>
-			</div>
+				<div class="row">
+		<div class="column">
+			<a href="https://instagram.com/ayam._tiang" target="_blank"><img src="images/instagram.png"
+				width="100px"></a>
+		</div>
+		<div class="column">
+			<a href="https://pin.it/2RXfSdV" target="_blank"><img src="images/Pinterest-logo.png"
+				width="100px"></a>
+		</div>
+
+
+		<div class="column">
+			<a href="https://mobile.capcutshare.com/s/Zs82BdFGG" target="_blank"><img src="CapCut.png"
+				width="100px"></a>
+		</div>
+	</div>
 		</div>
 	</div>
 
@@ -137,10 +136,8 @@
 						<b>Tentang Saya</b>
 					</div>
 					<div class="body">
-						<p>Saya adalah seorang lulusan S1 Pendidikan Teknik Informatika dan Komputer. Saya saat ini
-							sedang mengajar ekstrakurikuler coding di SMP Islam Al Azhar 21. Saya suka membuat website
-							dan game 2d menggunakan unity. Saya sudah memiliki beberapa website dan game. Kalian bisa
-							mengaksesnya menggunakan tombol di bawah ini.
+						<p>Saya adalah seorang mahasiswi SMPI Al Azhar 21 Solo Baru.
+							Saya adalah seorang perempuan yang suka menggambar dan banyak lagi. Saya bisa beberapa bahasa seperti Rusia, Jerman, Jepang, Inggris, Arab, dan Spanyol. Saya juga bisa beberapa olahraga seperti Basket, Voli, Sepak bola. Info lain lanjut part 2 :D
 						</p>
 					</div>
 				</div>
